--- a/web/themes/crane/scss/entities/_views.scss
+++ b/web/themes/crane/scss/entities/_views.scss
@@ -16,7 +16,7 @@
 			clear: none;
   		float: left;
   		input{
-  			margin-top: 17px;
+  			margin-top: 18px !important;
   		}
 		}
 	}//end views filters
