--- a/web/themes/crane/scss/components/_media.scss
+++ b/web/themes/crane/scss/components/_media.scss
@@ -56,6 +56,7 @@
 		z-index: 30;
 		width: 100%;
 		background: $white;
+		border-top: 1px solid $borderRule;
 		padding-top: 1em;
 		margin: 0;
 	}
