--- a/web/themes/crane/scss/elements/_form-elements.scss
+++ b/web/themes/crane/scss/elements/_form-elements.scss
@@ -50,7 +50,7 @@
 	width: 100%;
 	line-height: 1;
 	min-height: 38px;
-	max-width: $textMax;
+	max-width: 300px;
 	@include placeholder;
 	&:focus{
 		@include placeholderFocus;
@@ -101,23 +101,23 @@
 	}
 }
 .js-form-type-email{
-	input{
-		@include textInput;
-	}
+	@extend .js-form-type-textfield;
 }
 .js-form-type-password{
-	input{
-		@include textInput;
-	}
+	@extend .js-form-type-textfield;
 }
 .js-form-type-tel{
+	@extend .js-form-type-textfield;
+}
+.js-form-type-number{
+	@extend .js-form-type-textfield;
 	input{
-		@include textInput;
+		max-width: 150px;
 	}
 }
 .js-form-type-search{
+	@extend .js-form-type-textfield;
 	input{
-		@include textInput;
 		@include placeholder;
 		&:focus{
 			@include placeholderFocus;
@@ -128,6 +128,9 @@
 	textarea{
 		@include textInput;
 	}
+}
+.js-form-type-entity-autocomplete{
+	@extend .js-form-type-textfield;
 }
 
 /* SELECTS
