--- a/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
@@ -14,11 +14,11 @@ $breadLinkHover    : $hoverLink;
 $breadCurrent      : $darkGrey;
 $highlighter       : $brightYellow;
 $buttonBack        : $link;
-$buttonBackHover   : $hoverLink;
-$buttonBackActive  : darken($hoverLink, 5%);
+$buttonBackHover   : $grey;
+$buttonBackActive  : darken($grey, 5%);
 $buttonText        : $white;
-$buttonTextHover   : $white;
-$buttonTextActive  : $white;
+$buttonTextHover   : $black;
+$buttonTextActive  : $black;
 $submitBack        : $link;
 $submitText        : $white;
 $submitBackHover   : $grey;
@@ -95,6 +95,7 @@ $selectHighlight          : $link;
 ---------------- */
 $tableHeaderBack  : $darkGrey;
 $tableHeaderText  : $white;
+$rowBorder        : $borderRule;
 $evenRowBack      : $siteBack;
 $evenRowText      : $baseText;
 $oddRowBack       : $grey;
