--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/02-layout/00-header/_site-header.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/02-layout/00-header/_site-header.scss
@@ -79,7 +79,7 @@
 /* MAIN NAVIGATION BLOCK
 ------------------------ */
 .block-superfishmain{
-	@include mobileStop{
+	@include onlyMobile{
 		&.contextual-region{
 			position: static;
 		}
