--- a/web/themes/citizen_patterns/components/_patterns/05-miscellaneous/_styleguide-specific.scss
+++ b/web/themes/citizen_patterns/components/_patterns/05-miscellaneous/_styleguide-specific.scss
@@ -242,7 +242,7 @@ $plBorder: #333333;
 /* SITE HEADER
 ------------------ */
 .pl .layout-container > header{
-	@include mobileStop{
+	@include onlyMobile{
 		.sf-horizontal{
 			display: none;
 		}
