--- a/web/themes/crane/scss/elements/_form-elements.scss
+++ b/web/themes/crane/scss/elements/_form-elements.scss
@@ -162,7 +162,7 @@ optgroup:empty{
 	min-width: 150px;
 	margin-bottom: .5em;
 }
-.select2-container--default{
+.crane .select2-container--default{
 	.select2-selection--single{
 		@include selectInput;
 		.select2-selection__rendered{
@@ -233,6 +233,10 @@ optgroup:empty{
 	border-radius: 0;
 	border-top: 0;
 	padding: 0;
+}
+.select2-container--default .select2-results__option{
+	font-size: 1.3rem;
+	line-height: 1.25;
 }
 .select2-container--default .select2-results__option[aria-selected="true"]{
 	background-color: $lightGrey;
